# autonotes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
app/: __init__.py  celery_app.py  config.py  main.py
app/api/: __init__.py
app/db/: __init__.py  session.py
app/models/: __init__.py  duplicate_pair.py  folder_convention.py  health_snapshot.py  job.py  llm_interaction.py  note_cluster.py  note_embedding.py  operation_log.py  patch_operation.py  triage_issue.py
app/schemas/: __init__.py  ai.py  batch_patch.py  cluster.py  convention.py  health.py  job.py  log.py  note.py  patch.py  similarity.py  triage.py  undo.py
app/services/: __init__.py  ai_service.py  batch_patch_service.py  cluster_service.py  command_service.py  convention_service.py  embedding_service.py  health_service.py  job_service.py  llm_provider.py  log_service.py  moc_service.py  note_parser.py  obsidian_client.py  patch_engine.py  prompts.py  similarity_service.py  triage_service.py  undo_service.py
app/static/: index.html
app/tasks/: __init__.py  ai_analysis.py  batch_patch_job.py  cluster_job.py  embedding_job.py  log_purge.py  triage_scan.py  vault_cleanup.py  vault_health_scan.py  vault_scan.py
docs/: conventions-setup.md
specs/001-ai-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vault-health-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+70 files in other folders)
